--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -20,9 +20,9 @@
             </a>
         </div>
         <div class="control-group currently-playing">
-            <h2 class="song-name">{{ playerBar.albumData.songs.title }}</h2>
-            <h2 class="artist-song-mobile"></h2>
-            <h3 class="artist-name">{{ playerBar.albumData.songs.artist }}</h3>
+            <h2 class="song-name">{{ playerBar.songPlayer.currentSong.title }}</h2>
+            <h2 class="artist-song-mobile">{{ playerBar.albumData.artist }}</h2>
+            <h3 class="artist-name">{{ playerBar.albumData.artist }}</h3>
             <div class="seek-control">
 <!--                <div class="seek-bar">
                     <div class="fill"></div>
@@ -30,7 +30,7 @@
                 </div>-->
                 <seek-bar></seek-bar>
                 <div class="current-time"></div>
-                <div class="total-time">{{ playerBar.albumData.songs.duration }}</div>
+                <div class="total-time">{{ playerBar.songPlayer.currentSong.duration }}</div>
             </div>
         </div>
         <div class="control-group volume">
