--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -28,11 +28,11 @@
                     <div class="fill"></div>
                     <div class="thumb"></div>
                 </div>-->
-                <seek-bar value=" {{ playerBar.songPlayer.currentTime }} "
-                          max=" {{ playerBar.songPlayer.currentSong.duration}} "
+                <seek-bar value="{{playerBar.songPlayer.currentTime}}"
+                          max="{{playerBar.songPlayer.currentSong.duration}}"
                           on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
-                <div class="current-time"> {{ playerBar.songPlayer.currentTime }} </div>
-                <div class="total-time">{{ playerBar.songPlayer.currentSong.duration }}</div>
+                <div class="current-time"> {{ playerBar.songPlayer.currentTime | timecode }} </div>
+                <div class="total-time">{{ playerBar.songPlayer.currentSong.duration | timecode }}</div>
             </div>
         </div>
         <div class="control-group volume">
@@ -41,7 +41,15 @@
                 <div class="fill"></div>
                 <div class="thumb"></div>
             </div>-->
-            <seek-bar></seek-bar>
+            <seek-bar>
+            
+<!--
+            value="{{playerBar.songPlayer.volume}}"
+                      max="{{playerBar.songPlayer.setVolume.max}}"
+                      on-change="{{playerBar.songPlayer.setVolume}}"
+-->
+            
+            </seek-bar>
         </div>
     </div>
 </section>
